--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
   </head>
 
   <body>
+  <p id="back-to-top"><a href="#top"><span></span>回到顶部</a></p>
     <div class="well">
       <div class="container">
         <div class="social">
@@ -50,5 +51,9 @@
     </div>
         {% block main %}{% endblock %}
     </div>
+
+    <div class="site-generator-wrapper">
+	<div class="site-generator">Copyright @ 2015 All rights reserved. &nbsp;&nbsp;&nbsp;&nbsp; Powered By <a href="http://flask.pocoo.org/">Flask</a></div>
+        </div>
  </body>
 </html>
