--- a/templates/category.html
+++ b/templates/category.html
@@ -32,10 +32,10 @@
       <nav>
         <ul class="pager">
             {% if posts.has_next %}
-          <li class="previous"><a href="/page/{{ posts.next_num }}">&larr; Older</a></li>
+          <li class="previous"><a href="/category/{{ category_name }}/page/{{ posts.next_num }}">&larr; Older</a></li>
             {% endif %}
             {% if posts.has_prev %}
-          <li class="next"><a href="/page/{{ posts.prev_num }}">Newer &rarr;</a></li>
+          <li class="next"><a href="/category/{{ category_name }}/page/{{ posts.prev_num }}">Newer &rarr;</a></li>
             {% endif %}
         </ul>
       </nav>
