--- a/templates/about.html
+++ b/templates/about.html
@@ -1,48 +1,20 @@
 {% extends "base.html" %}
 {% block main %}
+<div id="page-content">
 
-    <div class="container">
-    <div class="row">
-      <div class="col-md-9">
-        <nav>
-          <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation"><a href="/"><i class="icon-home"></i>&nbsp;Home</a></li>
-            <li role="presentation"><a href="/archives"><i class="icon-book"></i>&nbsp;Archives</a></li>
-            <li role="presentation" class="active"><a href="/about"><i class="icon-user-md"></i>&nbsp;About</a></li>
-          </ul>
-        </nav>
-        <article>
-          <div class="title">
-            <h2>About Me</h2>
-          </div>
+<div class="large-page-title">
+	<h1>About Me</h1>
+</div>
+<div id="terms-cont">
+	<ul>
+  <li><strong>Name:</strong> Zend</li>
+  <li><strong>Email:</strong> <a href="Mailto:i@z3lion.com">i@z3lion.com</a></li>
+  <li><strong>WeiBo:</strong> <a href="http://www.weibo.com/u/1745382967">Zend3</a></li>
+  <li><strong>Github:</strong> <a href="https://github.com/ZenQ3">ZenQ3</a></li>
+</ul>
 
-          <p>
-            <hr />
+</div>
 
-           </p>
-      <hr class="bs-docs-separator">
-	  <h1>Comments</h1>
-	  <div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'zend3'; // required: replace example with your forum shortname 这个地方需要改成你配置的网站名
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-        </article>
-        
-      </div><!--9 END-->
-    
-      <div class="col-md-3">
-          {% include "slider.html" %}
-      </div><!--3 END-->
-    </div><!--ROW END-->
-    </div>
+</div>
 
 {% endblock %}
