--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,48 @@
 {% extends "base.html" %}
-{% block main %}<div class="container">
-    <div class="row">
-        <div class="col-md-9">
-            <nav>
-          <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="/"><i class="icon-home"></i>&nbsp;Home</a></li>
-            <li role="presentation"><a href="/archives"><i class="icon-book"></i>&nbsp;Archives</a></li>
-            <li role="presentation"><a href="/about"><i class="icon-user-md"></i>&nbsp;About</a></li>
-          </ul>
-        </nav>
-    {% for p in posts.items %}
-    <article>
-          <div class="title">
-            <h3><a href="/article/{{ p.id }}">{{ p.post_title }}</a></h3>
-          </div>
+{% block main %}
+			<div id="page-content">
 
-          <p>
-                {{ p.post_excerpt |safe}}
-          </p>
-          <ul class="post-meta">
-            <li><i class="icon-reorder"></i>&nbsp;<a href="/category/{{ p.category_name }}">{{ p.category_name }}</a></li>
-            <li><i class="icon-time"></i>&nbsp;{{ p.post_date.strftime('%B %d %Y') }}</li>
-            <li><i class="icon-eye-open"></i>&nbsp;{{ p.post_view_count }}</li>
-            <li><i class="icon-comments-alt"></i>&nbsp;<a href="/article/{{ p.id }}#disqus_thread">Comments</a></li>
-            <!--<li><a rel="nofollow" href="#" data-toggle="modal" data-target="#myModal"><i class="icon-heart"></i>&nbsp;{{ p.post_love_count }}</a></li>-->
-            <!--<li><a rel="nofollow" href="#">Read More <i class="icon-double-angle-right"></i></a></li>-->
-          </ul>
-          <hr class="bs-docs-separator">
-    </article>
-    {% endfor %}
-      <nav>
-        <ul class="pager">
-            {% if posts.has_next %}
-          <li class="previous"><a href="/page/{{ posts.next_num }}">&larr; Older</a></li>
-            {% endif %}
-            {% if posts.has_prev %}
-          <li class="next"><a href="/page/{{ posts.prev_num }}">Newer &rarr;</a></li>
-            {% endif %}
-        </ul>
-      </nav>
-        </div><!--9 END-->
-        <div class="col-md-3">
-            {% include "slider.html" %}
-        </div><!--3 END-->
-    </div><!--ROW END-->
+<div class="page-title-inline">
+
+	<h1>Zend's Blog</h1>
+	<h2>Home</h2>
+
+</div>
+<div class="cont932">
+	<hr style="margin-top: 0;">
+	<div id="journal-articles-block">
+    {% for p in posts.items %}
+		<div class="journal-article">
+			<div class="journal-post-info">
+				<div class="journal-cat-box">
+            <a href="/category/{{ p.category_name }}/" title="{{ p.category_name }}">
+                {{ p.category_name }}
+
+            </a>
+</div>
+
+			</div>
+			<div class="journal-body">
+				<h1 class="journal-title"><a href="/article/{{ p.id }}">{{ p.post_title }}</a><span class="author">by {{ p.post_date.strftime('%B %d %Y') }}</span></h1>
+
+				<span class="teaser">
+                    {{ p.post_excerpt |safe}}
+				</span>
+				<span class="readmore"><a href="/article/{{ p.id }}">Read More</a></span>
+			</div>
+		</div>
+		<div class="clearboth"></div>
+{% endfor %}
+    </div>
+    {% if posts.has_next %}
+<div id="journal-arrows-cont">
+			<a href="/search/page/{{ posts.next_num }}" class="journal-arrow ja-forward"></a>
+	</div>
+
+	<div class="clearboth"></div>
+	<div id="journal-loadmore">Load More…</div>
+    {% endif %}
+    </div>
+    </div>
 
 {% endblock %}
