--- a/templates/post.html
+++ b/templates/post.html
@@ -1,55 +1,77 @@
 {% extends "base.html" %}
 {% block main %}
+<div id="page-content">
 
-    <div class="container">
-    <div class="row">
-      <div class="col-md-9">
-        <nav>
-          <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="/"><i class="icon-home"></i>&nbsp;Home</a></li>
-            <li role="presentation"><a href="/archives"><i class="icon-book"></i>&nbsp;Archives</a></li>
-            <li role="presentation"><a href="/about"><i class="icon-user-md"></i>&nbsp;About</a></li>
-          </ul>
-        </nav>
-        <article>
-          <div class="title">
-            <h2>{{ post.post_title }}</h2>
-          </div>
-          <ul class="post-meta">
-            <li><i class="icon-reorder"></i>&nbsp;<a href="/category/{{ post.category_name }}">{{ post.category_name }}</a></li>
-            <li><i class="icon-time"></i>&nbsp;{{ post.post_date.strftime('%B %d %Y') }}</li>
-            <li><i class="icon-eye-open"></i>&nbsp;{{ post.post_view_count }}</li>
-            <li><i class="icon-comments-alt"></i>&nbsp;<a href="/article/{{ post.id }}#disqus_thread">Comments</a></li>
-            <li><a rel="nofollow" href="#"><i class="icon-heart-empty"></i>&nbsp;{{ post.post_love_count }}</a></li>
-            <!--<li><a rel="nofollow" href="#">Read More <i class="icon-double-angle-right"></i></a></li>-->
-          </ul>
-          <p>
-            <hr />
-            {{ post.post_content |safe  }}
-           </p>
-      <hr class="bs-docs-separator">
-	  <h1>Comments</h1>
-	  <div id="disqus_thread"></div>
+<div id="page-content">
+	<div class="cont932">
+	<div id="journal-articles-block">
+		<div class="journal-article">
+			<div class="journal-post-info">
+				<div class="journal-cat-box">
+
+
+				<div class="journal-cat-box">
+
+<a href="/category#{{ post.category_name }}" title="{{ post.category_name }}">
+	{{ post.category_name }}
+
+</a>
+</div>
+
+				</div>
+			</div>
+			<div class="journal-body">
+				<h1 class="journal-title">{{ post.post_title | safe }}<span class="author">by Zend</span>
+				</h1>
+                <br>
+				<span class="the-article">
+				{{ post.post_content | safe}}
+				</span>
+				<div class="journal-date">Published {{ post.post_date.strftime('%d %B %Y') }}</div>
+				<div class="journal-tags">
+
+
+        {% for t in post_tags %}
+		<a class="tag-cont" href="/tag#{{ t.tag_name }}">
+			<div class="tag-l"></div>
+			<div class="tag-c">{{ t.tag_name }}</div>
+			<div class="tag-r"></div>
+		</a>
+        {% endfor %}
+
+
+				</div>
+			</div>
+		</div>
+		<div class="clearboth"></div>
+	</div>
+</div>
+	<div class="clearboth"></div>
+
+
+
+  <!-- 多说评论框 start -->
+	<div class="ds-thread" data-thread-key="{{ post.id }}" data-title="{{ post.post_title }}" data-url="http://z3lion.com/article/{{ post.id }}"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'zend3'; // required: replace example with your forum shortname 这个地方需要改成你配置的网站名
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-        </article>
-        
-      </div><!--9 END-->
-    
-      <div class="col-md-3">
-          {% include "slider.html" %}
-      </div><!--3 END-->
-    </div><!--ROW END-->
-    </div>
+var duoshuoQuery = {short_name:"zend"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0]
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
+
+
+
+	<div class="clearboth"></div>
+</div>
+
+			</div>
 
 {% endblock %}
